--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -103,6 +103,9 @@
         <action
             android:id="@+id/action_playlistDetailsFragment_to_editPlayListFragment"
             app:destination="@id/editPlayListFragment" />
+        <action
+            android:id="@+id/action_playlistDetailsFragment_to_mediaLibraryFragment"
+            app:destination="@id/mediaLibraryFragment" />
     </fragment>
     <fragment
         android:id="@+id/editPlayListFragment"
@@ -114,6 +117,10 @@
             app:destination="@id/playlistDetailsFragment" />
         <action
             android:id="@+id/action_editPlayListFragment_to_mediaLibraryFragment"
-            app:destination="@id/mediaLibraryFragment" />
+            app:destination="@id/mediaLibraryFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 </navigation>
