--- a/app/src/main/res/layout/playlist_details_fragment.xml
+++ b/app/src/main/res/layout/playlist_details_fragment.xml
@@ -174,7 +174,7 @@
             android:background="@drawable/playlist_edit_bottom_background"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/padding_16"
-            app:behavior_peekHeight="180dp"
+            app:behavior_peekHeight="240dp"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             android:visibility="visible">
 
@@ -533,5 +533,19 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/nothingToShareNotification"
+        style="@style/PlaylistNotificationStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingVertical="@dimen/padding_16"
+        android:paddingHorizontal="@dimen/padding_8"
+        android:layout_marginHorizontal="@dimen/padding_8"
+        android:layout_marginBottom="@dimen/padding_16"
+        android:layout_gravity="bottom"
+        android:text="@string/nothing_to_share"
+        android:visibility="gone"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
