--- a/app/src/main/res/layout/playlist_details_fragment.xml
+++ b/app/src/main/res/layout/playlist_details_fragment.xml
@@ -61,28 +61,33 @@
         android:visibility="visible"/>
 
         <TextView
-            style="@style/PlayerTrackText"
             android:id="@+id/playlistTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_24"
             app:layout_constraintTop_toBottomOf="@id/poster"
             app:layout_constraintStart_toStartOf="@id/leftBorder"
-            android:textSize="@dimen/text_size_22sp"
+            android:textSize="@dimen/text_size_24sp"
+            android:fontFamily="@font/ys_display_regular"
+            android:textFontWeight="700"
+            android:textStyle="bold"
+            android:textColor="@color/yp_black"
             android:maxLines="1"
             android:maxLength="35"
             android:ellipsize="end"
             tools:text="The Greatest playlist of all time"/>
 
         <TextView
-            style="@style/PlayerTrackText"
             android:id="@+id/playlistDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_8"
             app:layout_constraintTop_toBottomOf="@id/playlistTitle"
             app:layout_constraintStart_toStartOf="@id/leftBorder"
-            android:textSize="@dimen/text_size_22sp"
+            android:textSize="@dimen/text_size_18sp"
+            android:fontFamily="@font/ys_display_regular"
+            android:textFontWeight="400"
+            android:textColor="@color/yp_black"
             android:maxLines="1"
             android:maxLength="35"
             android:ellipsize="end"
@@ -100,7 +105,10 @@
                 style="@style/PlayerTrackText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size_22sp"
+                android:textSize="@dimen/text_size_18sp"
+                android:fontFamily="@font/ys_display_regular"
+                android:textFontWeight="400"
+                android:textColor="@color/yp_black"
                 android:id="@+id/playlistDuration"
                 tools:text="300 минут"
                 android:layout_gravity="bottom"
@@ -119,7 +127,10 @@
                 style="@style/PlayerTrackText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size_22sp"
+                android:textSize="@dimen/text_size_18sp"
+                android:fontFamily="@font/ys_display_regular"
+                android:textFontWeight="400"
+                android:textColor="@color/yp_black"
                 android:id="@+id/tracksNumber"
                 tools:text="98 треков"
                 android:layout_gravity="bottom"/>
@@ -168,13 +179,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            style="@style/ClassicAttributes"
             android:id="@+id/trackListBSContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/playlist_edit_bottom_background"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/padding_16"
-            app:behavior_peekHeight="240dp"
+            app:behavior_peekHeight="260dp"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             android:visibility="visible">
 
@@ -234,11 +245,10 @@
         android:id="@+id/editPlayListBSContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/playlist_edit_bottom_background"
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/padding_16"
         app:behavior_hideable="true"
-        app:behavior_peekHeight="240dp"
+        app:behavior_peekHeight="260dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         app:layout_constraintTop_toBottomOf="@id/playlistTitle"
         app:layout_constraintStart_toEndOf="@id/leftBorder"
@@ -246,6 +256,7 @@
         android:visibility="visible">
 
         <View
+            style="@style/ClassicAttributes"
             android:id="@+id/editPLView"
             android:layout_width="50dp"
             android:layout_height="4dp"
