--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -199,9 +199,7 @@
     <style name="BottomNavigationStyle" parent="Widget.MaterialComponents.BottomNavigationView" >
         <item name="itemTextColor">@color/nav_item_color_night</item>
         <item name="itemIconTint">@color/nav_item_color_night</item>
-
         <item name="backgroundTint">@color/yp_black</item>
-
         <item name="itemTextAppearanceActive">@style/BottomNavTextAppearance</item>
         <item name="itemTextAppearanceInactive">@style/BottomNavTextAppearance</item>
     </style>
@@ -214,7 +212,7 @@
     </style>
 
     <style name="ClassicAttributes">
-        <item name="android:background">@color/yp_black</item>
+        <item name="android:background">@drawable/playlist_edit_bottom_background_night</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -229,6 +227,13 @@
     <style name="CreatePlaylistInputStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeColor">@color/createplaylist_input_selector_night</item>
         <item name="android:textColorHint">@color/white</item>
+    </style>
+
+    <style name="NewPlayListInputTextAppearance" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
