--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@null"
     card_view:cardElevation="1dp"
     card_view:cardCornerRadius="@dimen/padding_8">
 
@@ -21,6 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/playlist_background_shape"
+            android:clipToOutline="true"
             app:layout_constraintDimensionRatio="h,1:1"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
@@ -51,4 +51,5 @@
             tools:text="3 tracks" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
