--- a/app/src/main/res/layout/playlist_details_fragment.xml
+++ b/app/src/main/res/layout/playlist_details_fragment.xml
@@ -502,7 +502,7 @@
                 android:background="@drawable/create_playlist_button_inactive"
                 android:elevation="@dimen/padding_8"
                 android:fontFamily="@font/ys_display_medium"
-                android:text="@string/confirm_deletion"
+                android:text="@string/yes"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_14sp"
@@ -519,7 +519,7 @@
                 android:background="@drawable/create_playlist_button"
                 android:elevation="@dimen/padding_8"
                 android:fontFamily="@font/ys_display_medium"
-                android:text="@string/cancel"
+                android:text="@string/no"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_14sp"
