--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -43,12 +43,11 @@
         <item name="android:textSize">@dimen/text_size_14sp</item>
     </style>
 
-    <style name="SettingsActivityButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="android:layout_width">24dp</item>
+    <style name="SettingsActivityButton" >
+        <item name="android:layout_width">28dp</item>
         <item name="android:layout_height">24dp</item>
-        <item name="android:layout_gravity">end</item>
         <item name="android:backgroundTint">@color/yp_black</item>
-        <item name="iconTint">@color/white</item>
+        <item name="tint">@color/white</item>
     </style>
 
     <style name="SettingsActivityButtonBack" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -193,6 +192,20 @@
     <style name="ToolBarStyle">
         <item name="android:titleTextColor">@color/white</item>
         <item name="backgroundColor">@color/yp_black</item>
+        <item name="navigationIcon">@drawable/vector_arrow_back_night</item>
+    </style>
+
+    <style name="NewPlaylistTitleStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_22sp</item>
+    </style>
+
+    <style name="ToolBarIconStyle">
+        <item name="navigationIcon">@drawable/vector_arrow_back_night</item>
+
     </style>
 
 
